--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
   <ul>
 
     <li>
-        <a href="404.html">World wide disaster cuz of hcream</a>
+        <a href="404.html">test 1 wide disaster cuz of hcream</a>
         <span class="philosophy">philosophy</span>
         <p>2024-05-26</p>
     </li>
