--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
 <h3>
 
-  <a href = "index.html">blog</a>
+  <a href = "index.html">projects</a>
 
 </h3>
 
@@ -18,17 +18,23 @@
 
   <ul>
 
+
     <li>
-        <a href="404.html">hypocrisy of existentialists philosophers</a>
-        <span class="philosophy">philosophy</span>
-        <span class="religion">religion</span>
-        <p>2024-06-30</p>
+      <a href="404.html">goatboy: gameboy emulator</a>
+      <span class="programming">programming</span>
+      <p>ongoing</p>
     </li>
 
     <li>
-      <a href="404.html">cpu core software emulation is pretty easy</a>
+      <a href="404.html">richard the combat robot</a>
+      <span class="religion">engineering</span>
+      <p>ongoing</p>
+    </li>
+
+    <li>
+      <a href="404.html">chip-8 interpreter</a>
       <span class="programming">programming</span>
-      <p>2024-05-30</p>
+      <p>completed: 2023-04-1</p>
     </li>
 
   </ul>
