--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <div class="mainContent projects">
-    <a href="404.html">projects</a>
+    <a href="projects.html">projects</a>
   </div>
 
   <div class="mainContent blog">
