--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
     </li>
 
     <li>
-      <a href="404.html">chip-8 interpreter</a>
+      <a href="https://github.com/MahdiHassen/Chip8-Interperter">chip-8 interpreter</a>
       <span class="programming">programming</span>
       <p>completed: 2023-04-1</p>
     </li>
