--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
     <li>
       <a href="https://github.com/MahdiHassen/Chip8-Interperter">chip-8 interpreter</a>
       <span class="programming">programming</span>
-      <p>completed: 2023-04-1</p>
+      <p>completed</p>
     </li>
 
   </ul>
