--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>
     Mahdi's Website
   </title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
   <meta property="og:title" content="">
@@ -18,9 +18,9 @@
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
 
-  <link rel="manifest" href="../site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
 
