--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h3>Mahdi Hassen</h3>
 
   <div class="mainContent me">
-    <a href="404.html">about</a>
+    <a href="about.html">about</a>
   </div>
 
   <div class="mainContent projects">
