--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
 
 <div class="sectionContent">
 
+  <a> Computer Engineering Student at TMU, I prefer email if you need to get to me: </a>
+
   <ul>
 
     <li>
