--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 
 
     <li>
-      <a href="404.html">goatboy: gameboy emulator</a>
+      <a href="https://github.com/MahdiHassen/Goatboy">goatboy: gameboy emulator</a>
       <span class="programming">programming</span>
       <p>ongoing</p>
     </li>
