--- a/blog.html
+++ b/blog.html
@@ -19,16 +19,10 @@
   <ul>
 
     <li>
-        <a href="404.html">hypocrisy of existentialists philosophers</a>
+        <a href="blogPages/does sartre offer viable ethics.html">does sartre offer viable ethics?</a>
         <span class="philosophy">philosophy</span>
-        <span class="religion">religion</span>
-        <p>2024-06-30</p>
-    </li>
-
-    <li>
-      <a href="404.html">cpu core software emulation is pretty easy</a>
-      <span class="programming">programming</span>
-      <p>2024-05-30</p>
+        <span class="wip">wip</span>
+        <p>last edited: 2024-05-28</p>
     </li>
 
   </ul>
