--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
     </li>
 
     <li>
-      <a href="404.html">richard the combat robot</a>
+      <a href="projectPages/richard%20the%20combat%20robot.html">richard the combat robot</a>
       <span class="religion">engineering</span>
       <p>ongoing</p>
     </li>
