--- a/projectPages/richard_the_combat_robot.html
+++ b/projectPages/richard_the_combat_robot.html
@@ -11,10 +11,10 @@
 <img src="/resources/richard/schematic.png" height="300" width="450">
 <img src="/resources/richard/sim.png" height="300" width="450">
 <img src="/resources/richard/splitters.jpg" height="450" width="300">
-<img src="/resources/richard/arm.png" height="300" width="450">
-<img src="/resources/richard/proto1.jpg" height="450" width="300">
-<img src="/resources/richard/proto2.jpg" height="450" width="300">
-<img src="/resources/richard/proto3.jpg" height="300" width="450">
+<img src="/richard/arm.png" height="300" width="450">
+<img src="/richard/proto1.jpg" height="450" width="300">
+<img src="/richard/proto2.jpg" height="450" width="300">
+<img src="/richard/proto3.jpg" height="300" width="450">
 
 </body>
 </html>
