--- a/projectPages/richard_the_combat_robot.html
+++ b/projectPages/richard_the_combat_robot.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 
-<img src="/resources/richard/richv1.png" height="300" width="450">
-<img src="/resources/richard/richv1_back.png" height="300" width="550">
-<img src="/resources/richard/schematic.png" height="300" width="450">
-<img src="/resources/richard/sim.png" height="300" width="450">
-<img src="/resources/richard/splitters.jpg" height="450" width="300">
-<img src="/richard/arm.png" height="300" width="450">
-<img src="/richard/proto1.jpg" height="450" width="300">
-<img src="/richard/proto2.jpg" height="450" width="300">
-<img src="/richard/proto3.jpg" height="300" width="450">
+<img src="richard/richv1.png" height="300" width="450" alt="front">
+<img src="richard/richv1_back.png" height="300" width="550">
+<img src="richard/schematic.png" height="300" width="450">
+<img src="richard/sim.png" height="300" width="450">
+<img src="richard/splitters.jpg" height="450" width="300">
+<img src="richard/arm.png" height="300" width="450">
+<img src="richard/proto1.jpg" height="450" width="300">
+<img src="richard/proto2.jpg" height="450" width="300">
+<img src="richard/proto3.jpg" height="300" width="450">
 
 </body>
 </html>
