--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,12 @@
     </li>
 
     <li>
+      <a href="https://github.com/MahdiHassen/RISC-V-CPU">risc-v cpu</a>
+      <span class="programming">engineering</span>
+      <p>completed</p>
+    </li>
+
+    <li>
       <a href="https://github.com/MahdiHassen/Chip8-Interperter">chip-8 interpreter</a>
       <span class="programming">programming</span>
       <p>completed</p>
