--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
     <li>
       <a href="https://github.com/MahdiHassen/RISC-V-CPU">risc-v cpu</a>
-      <span class="programming">engineering</span>
+      <span class="engineering">engineering</span>
       <p>completed</p>
     </li>
 
