--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
-    Mahdi's Website
+    Mahdi's Site
   </title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
+  <meta name="Mahdi Hassen's Website" content="">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
