--- a/about.html
+++ b/about.html
@@ -25,15 +25,15 @@
     </li>
 
     <li>
-      <a href ="Resume.pdf">resume</a>
+      <a href ="Resume.pdf" target="_blank" rel="nofollow noopener">resume</a>
     </li>
 
     <li>
-      <a href ="https://www.linkedin.com/in/mahdi-hassen/">linkedin</a>
+      <a href ="https://www.linkedin.com/in/mahdi-hassen/" target="_blank" rel="nofollow noopener">linkedin</a>
     </li>
 
     <li>
-      <a href ="https://github.com/MahdiHassen">github</a>
+      <a href ="https://github.com/MahdiHassen" target="_blank" rel="nofollow noopener">github</a>
     </li>
 
   </ul>
