--- a/projects.html
+++ b/projects.html
@@ -20,25 +20,25 @@
 
 
     <li>
-      <a href="https://github.com/MahdiHassen/Goatboy">goatboy: gameboy emulator</a>
+      <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator</a>
       <span class="programming">programming</span>
       <p>ongoing</p>
     </li>
 
     <li>
-      <a href="projectPages/richard_the_combat_robot.html">richard the combat robot</a>
+      <a href="projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
       <span class="religion">engineering</span>
       <p>ongoing</p>
     </li>
 
     <li>
-      <a href="https://github.com/MahdiHassen/RISC-V-CPU">risc-v cpu</a>
-      <span class="engineering">engineering</span>
+      <a href="https://github.com/MahdiHassen/RISC-V-CPU" target="_blank" rel="nofollow noopener">risc-v cpu</a>
+      <span class="religion">engineering</span>
       <p>completed</p>
     </li>
 
     <li>
-      <a href="https://github.com/MahdiHassen/Chip8-Interperter">chip-8 interpreter</a>
+      <a href="https://github.com/MahdiHassen/Chip8-Interperter" target="_blank" rel="nofollow noopener">chip-8 interpreter</a>
       <span class="programming">programming</span>
       <p>completed</p>
     </li>
