--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 
 <div class="sectionContent">
 
-  <a> Computer Engineering Student at TMU, I prefer email if you need to get to me: </a>
+  <a> I'm a Computer Engineering Student at TMU, I prefer email if you need to get to me: </a>
 
   <ul>
 
