--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,13 @@
   <ul>
 
     <li>
+      <a href="blogPages/Modern_Boredom.html" >modern boredom</a>
+      <span class="philosophy">philosophy</span>
+      <span class="short">short</span>
+      <p>2024-06-05</p>
+    </li>
+
+    <li>
         <a href="blogPages/does sartre offer viable ethics.html" >does sartre offer viable ethics?</a>
         <span class="philosophy">philosophy</span>
         <span class="wip">wip</span>
