--- a/projects.html
+++ b/projects.html
@@ -18,11 +18,16 @@
 
   <ul>
 
+    <li>
+      <a href="mega meow mart.html" target="_blank" rel="nofollow noopener">mega meow-mart</a>
+      <span class="programming">programming</span> <span class="short">game development</span>
+      <p>completed for gmtk2024 gamejam</p>
+    </li>
 
     <li>
-      <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator</a>
+      <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator core</a>
       <span class="programming">programming</span>
-      <p>ongoing</p>
+      <p>on hold</p>
     </li>
 
     <li>
