--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="mainContent blog">
-    <a href="blog.html">blog</a>
+    <a href="404.html">blog</a>
   </div>
 
   <div class="mainContent ep">
