--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
   <ul>
 
     <li>
-      <a href="mega meow mart.html" target="_blank" rel="nofollow noopener">mega meow-mart</a>
+      <a href="mega meow mart.html">mega meow-mart</a>
       <span class="programming">programming</span> <span class="short">game development</span>
       <p>completed for gmtk2024 gamejam</p>
     </li>
