--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <li>
       <a href="mega meow mart.html">mega meow-mart</a>
       <span class="programming">programming</span> <span class="short">game development</span>
-      <p>completed for gmtk2024 gamejam</p>
+      <p>completed: gmtk2024</p>
     </li>
 
     <li>
