--- a/projects.html
+++ b/projects.html
@@ -24,16 +24,17 @@
       <p>completed for gmtk2024 gamejam</p>
     </li>
 
-    <li>
-      <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator core</a>
-      <span class="programming">programming</span>
-      <p>on hold</p>
-    </li>
 
     <li>
       <a href="projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
       <span class="religion">engineering</span>
       <p>ongoing</p>
+    </li>
+
+    <li>
+      <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator core</a>
+      <span class="programming">programming</span>
+      <p>completed</p>
     </li>
 
     <li>
