--- a/projects.html
+++ b/projects.html
@@ -18,17 +18,19 @@
 
   <ul>
 
-    <li>
-      <a href="mega meow mart.html">mega meow-mart</a>
-      <span class="programming">programming</span> <span class="short">game development</span>
-      <p>completed: gmtk2024</p>
-    </li>
+
 
 
     <li>
       <a href="projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
       <span class="religion">engineering</span>
       <p>ongoing</p>
+    </li>
+
+    <li>
+      <a href="mega meow mart.html">mega meow-mart</a>
+      <span class="programming">programming</span> <span class="short">game development</span>
+      <p>completed: top 10% in gmtk2024</p>
     </li>
 
     <li>
