--- a/blogPages/does sartre offer viable ethics.html
+++ b/blogPages/does sartre offer viable ethics.html
@@ -18,25 +18,9 @@
 
 
 <p>
-  Whether Sartre manages to offer a viable ethics is a complicated question that needs to be broken down. To ask whether Sartre offers ‘viable ethics’, is to ask whether the set of ethical principles he proposes as a whole are viable.
-</p>
+  The question of whether Sartre manages to offer a viable ethics is a complicated question that needs to be broken down. To ask whether Sartre offers ‘viable ethics,’ is to ask whether the set of ethical principles he proposes as a whole are viable. We must first develop some criteria about what defines an ethical system (a set of ethical principles) as ‘viable’:</p>
 
 
-  <p>
-    To answer the question of whether Sartre’s ethics are viable, we must develop some criteria about what defines an ethical system (a set of ethical principles) as ‘viable’:
-  </p>
-
-  <p>
-    First, let us distinguish the difference between viability and practically. For an ethical principle to be viable, it must be practical. That is, if a set of ethical principles cannot be applied to real life scenarios (practicality), it isn’t viable.
-  </p>
-
-  <p>
-    Next, the viability of an ethical system is also characterized by its consistency; there must be no logical contradictions, every ethical principle should be justified and supported by each other. The application of said principles should also be applicable in a predictable and consistent manner, the ‘right’ thing to do in one scenario should still be the right thing to do in a similar situation unless there’s an adequate reason for an exception. Without this type of consistency, ethics will not be viable as it will not be a reliable way to solve ethical conflicts and disagreements; ethical principles that contradict themselves will not be able to provide clear solutions to specific ethical conflicts.
-  </p>
-
-  <p>
-    These two criteria are what I believe to be, the most human, and important factors in determining whether an ethical system is viable. If an ethical system is to not be practical and consistent, then I do not believe a man can viably believe and live by it. Man cannot abide by a system in which he cannot apply. Man cannot abide by a system in which he cannot trust. Just as you cannot trust a friend who is inconsistent in their loyalty to you, you cannot trust an ethical system that is inconsistent in its resolutions to conflicts. If you don’t trust a system, you cannot (in good faith) abide by it.
-  </p>
 
 
 </div>
