--- a/about.html
+++ b/about.html
@@ -16,12 +16,13 @@
 
 <div class="sectionContent">
 
-  <a> I'm a Computer Engineering Student at TMU, I prefer email if you need to get to me: </a>
+  <a> i'm a computer engineering student at toronto metropolitan university. if you need to get to me, email is the quickest way: </a>
 
   <ul>
 
     <li>
       <a href ="mailto:mahdi.hassen@torontomu.ca">email</a>
+      <a>(mahdi.hassen@torontomu.ca) </a>
     </li>
 
     <li>
