--- a/projectPages/richard_the_combat_robot.html
+++ b/projectPages/richard_the_combat_robot.html
@@ -1,20 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>collage</title>
+  <style>
+
+    body {
+      font-family: monospace;
+    }
+    div.gallery {
+      border: 1px solid #ccc;
+    }
+
+    div.gallery:hover {
+      border: 1px solid #777;
+    }
+
+    div.gallery img {
+      width: 100%;
+      height: auto;
+    }
+
+    div.desc {
+      padding: 15px;
+      text-align: center;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    .responsive {
+      padding: 0 6px;
+      float: left;
+      width: 24.99999%;
+    }
+
+    @media only screen and (max-width: 700px) {
+      .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+      }
+    }
+
+    @media only screen and (max-width: 500px) {
+      .responsive {
+        width: 100%;
+      }
+    }
+
+    .clearfix:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  </style>
 </head>
 <body>
 
-<img src="richard/richv1.png" height="300" width="450" alt="front">
-<img src="richard/richv1_back.png" height="300" width="550">
-<img src="richard/schematic.png" height="300" width="450">
-<img src="richard/sim.png" height="300" width="450">
-<img src="richard/arm.png" height="300" width="450">
-<img src="richard/splitters.jpg" height="450" width="300">
-<img src="richard/proto1.jpg" height="450" width="300">
-<img src="richard/proto2.jpg" height="450" width="300">
-<img src="richard/proto3.jpg" height="300" width="450">
+
+
+<h2>Richard Gallery</h2>
+
+<h4>he's a wip</h4>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="richard/sim.png">
+      <img src="richard/sim.png" alt="Cinque Terre" width="600" height="400">
+    </a>
+    <div class="desc">Software sim screenshot</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
 
 </body>
 </html>
+
+
