--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="mainContent ep">
-    <a href="404.html">art</a>
+    <a href="art/art.html">art</a>
   </div>
 
 </body>
