--- a/index.html
+++ b/index.html
@@ -24,26 +24,6 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
-
-  <h3>Mahdi Hassen</h3>
-
-  <div class="mainContent me">
-    <a href="about.html">about</a>
-  </div>
-
-  <div class="mainContent projects">
-    <a href="projects.html">projects</a>
-  </div>
-
-  <div class="mainContent blog">
-    <a href="404.html">blog</a>
-  </div>
-
-  <div class="mainContent ep">
-    <a href="art/art.html">art</a>
-  </div>
-
-</body>
+<body> </body>
 
 </html>
