--- a/index.html
+++ b/index.html
@@ -10,6 +10,29 @@
   <link rel="stylesheet" href="css/style.css">
   <meta name="Mahdi Hassen's Website" content="">
 
+
+<body>
+
+<h3>Mahdi Hassen</h3>
+
+<div class="mainContent me">
+  <a href="about.html">about</a>
+</div>
+
+<div class="mainContent projects">
+  <a href="projects.html">projects</a>
+</div>
+
+<div class="mainContent blog">
+  <a href="404.html">blog</a>
+</div>
+
+<div class="mainContent ep">
+  <a href="art/art.html">art</a>
+</div>
+
+</body>
+
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
