--- a/art/art.html
+++ b/art/art.html
@@ -13,8 +13,21 @@
 
     }
 
+    h2 {
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 0;
+      margin-top: 16px;
+      font-size: 24px;
+
+      @media (max-width: 600px){
+        margin-top: 80px;
+      }}
+
     h4{
       font-weight: normal;
+      font-size: 16px;
+
     }
 
     div.gallery {
@@ -68,7 +81,7 @@
 <body>
 
 
-<a href = "javascript:history.back()"> <h2>my own art gallery</h2> </a>
+<a href = "javascript:history.back()"> <h2>< my own art gallery</h2> </a>
 
 <h4>i don't do art seriously at all, its a pretty fun thing i do to unwind. the descriptions are generally satire.</h4>
 
