--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,17 @@
   <ul>
 
 
+    <li>
+      <a>capstone: untitled AR game</a>
+      <span class="programming">programming</span>
+      <p>ongoing</p>
+    </li>
 
+    <li>
+      <a>computer vision classification of skin lesions</a>
+      <span class="programming">programming</span>
+      <p>ongoing</p>
+    </li>
 
     <li>
       <a href="projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
