--- a/art/art.html
+++ b/art/art.html
@@ -4,6 +4,8 @@
   <style>
 
     body {
+      padding: 2.5px;
+
       font-family: monospace;
     }
 
@@ -22,7 +24,6 @@
 
       @media (max-width: 600px){
         margin-top: 80px;
-        font-size: 3em;
       }}
 
     h4{
@@ -59,14 +60,14 @@
       width: 24.99999%;
     }
 
-    @media only screen and (max-width: 1500px) {
+    @media only screen and (max-width: 600px) {
       .responsive {
         width: 49.99999%;
         margin: 6px 0;
       }
     }
 
-    @media only screen and (max-width: 1000px) {
+    @media only screen and (max-width: 100px) {
       .responsive {
         width: 100%;
       }
