--- a/art/art.html
+++ b/art/art.html
@@ -22,8 +22,10 @@
       margin-top: 16px;
       font-size: 24px;
 
-      @media (max-width: 600px){
+      @media (max-width: 1000px){
         margin-top: 80px;
+        font-size: 48px;
+
       }}
 
     h4{
@@ -60,14 +62,14 @@
       width: 24.99999%;
     }
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 1200px) {
       .responsive {
         width: 49.99999%;
         margin: 6px 0;
       }
     }
 
-    @media only screen and (max-width: 100px) {
+    @media only screen and (max-width: 1000px) {
       .responsive {
         width: 100%;
       }
