--- a/art/art.html
+++ b/art/art.html
@@ -23,8 +23,9 @@
       font-size: 24px;
 
       @media (max-width: 1000px){
-        margin-top: 80px;
+        margin-top: 160px;
         font-size: 48px;
+
 
       }}
 
@@ -32,7 +33,12 @@
       font-weight: normal;
       font-size: 16px;
 
-    }
+      @media (max-width: 1000px){
+        margin-top: 32px;
+        font-size: 32px;
+
+      }}
+
 
     div.gallery {
       border: 1px solid #ccc;
