--- a/art/art.html
+++ b/art/art.html
@@ -23,8 +23,8 @@
       font-size: 24px;
 
       @media (max-width: 1000px){
-        margin-top: 160px;
-        font-size: 48px;
+        margin-top: 100px;
+        font-size: 3em;
 
 
       }}
@@ -35,7 +35,7 @@
 
       @media (max-width: 1000px){
         margin-top: 32px;
-        font-size: 32px;
+        font-size: 2em;
 
       }}
 
