--- a/art/art.html
+++ b/art/art.html
@@ -91,7 +91,7 @@
 <body>
 
 
-<a href = "javascript:history.back()"> <h2>< my own art gallery</h2> </a>
+<a href = "javascript:history.back()"> <h2>.../art</h2> </a>
 
 <h4>i don't do art seriously at all, its a pretty fun thing i do to unwind. the descriptions are generally satire.</h4>
 
