--- a/art/art.html
+++ b/art/art.html
@@ -33,6 +33,8 @@
       font-weight: normal;
       font-size: 16px;
 
+
+
       @media (max-width: 1000px){
         margin-top: 32px;
         font-size: 2em;
@@ -91,11 +93,36 @@
 <body>
 
 
-<a href = "javascript:history.back()"> <h2>.../art</h2> </a>
+<a href = "../index.html"> <h2>< my own art gallery</h2> </a>
 
-<h4>i don't do art seriously at all, its a pretty fun thing i do to unwind. the descriptions are generally satire.</h4>
+<h4>i don't do art seriously at all.</h4>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="My_Shoelace.jpg">
+      <img src="My_Shoelace.jpg" alt="Art" width="600" height="400">
+    </a>
+    <div class="desc">my shoelace</div>
+  </div>
+</div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="It's_Over,_Isn't_It.jpg">
+      <img src="It's_Over,_Isn't_It.jpg" alt="Art" width="600" height="400">
+    </a>
+    <div class="desc">it's over isn't it</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="Go_On.jpg">
+      <img src="Go_On.jpg" alt="Art" width="600" height="400">
+    </a>
+    <div class="desc">go on</div>
+  </div>
+</div>
 
 <div class="responsive">
   <div class="gallery">
