--- a/art/art.html
+++ b/art/art.html
@@ -93,7 +93,7 @@
 <body>
 
 
-<a href = "../index.html"> <h2>< my own art gallery</h2> </a>
+<a href = "../index.html"> <h2>.../my own art gallery</h2> </a>
 
 <h4>i don't do art seriously at all.</h4>
 
