--- a/projects.html
+++ b/projects.html
@@ -20,21 +20,28 @@
 
 
     <li>
-      <a>capstone: untitled AR game</a>
+      <a>capstone: fishingARound</a>
       <span class="programming">programming</span>
       <p>ongoing</p>
     </li>
 
     <li>
-      <a>computer vision classification of skin lesions</a>
+      <a href="https://github.com/MahdiHassen/Cortex-M3Paint">m3 paint: embedded drawing application</a>
       <span class="programming">programming</span>
-      <p>ongoing</p>
+      <p>completed</p>
+    </li>
+
+
+    <li>
+      <a href="https://github.com/MahdiHassen/CV-Skin-Lesion-Classification">computer vision classification of skin lesions</a>
+      <span class="programming">programming</span>
+      <p>completed</p>
     </li>
 
     <li>
-      <a href="projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
+      <a href="https://github.com/MahdiHassen/VHDL-Pong">VGA Pong w/FPGA</a>
       <span class="religion">engineering</span>
-      <p>ongoing</p>
+      <p>completed</p>
     </li>
 
     <li>
