--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>blog</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
@@ -19,14 +19,14 @@
   <ul>
 
     <li>
-      <a href="blogPages/Modern_Boredom.html" >modern boredom</a>
+      <a href="../posts/Modern_Boredom.html" >modern boredom</a>
       <span class="philosophy">philosophy</span>
       <span class="short">short</span>
       <p>2024-06-05</p>
     </li>
 
     <li>
-        <a href="blogPages/does sartre offer viable ethics.html" >does sartre offer viable ethics?</a>
+        <a href="../posts/does%20sartre%20offer%20viable%20ethics.html" >does sartre offer viable ethics?</a>
         <span class="philosophy">philosophy</span>
         <span class="wip">wip</span>
         <p>last edited: 2024-05-28</p>
