--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
   <title>
     Mahdi's Site
   </title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <meta name="Mahdi Hassen's Website" content="">
 
 
@@ -30,7 +30,7 @@
 </div>
 
 <div class="mainContent ep">
-  <a href="art/art.html">art</a>
+  <a href="art.html">art</a>
 </div>
 
 -->
@@ -45,9 +45,8 @@
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="../icon.png">
 
-  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 
 <body>
