--- a/pages/art.html
+++ b/pages/art.html
@@ -126,8 +126,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Radical_Freedom.jpg">
-      <img src="Radical_Freedom.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Radical_Freedom.jpg">
+      <img src="../art/Radical_Freedom.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">radical freedom</div>
   </div>
@@ -135,8 +135,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Compulsive_Freedom.jpg">
-      <img src="Compulsive_Freedom.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Compulsive_Freedom.jpg">
+      <img src="../art/Compulsive_Freedom.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">compulsive freedom</div>
   </div>
@@ -144,8 +144,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Beautiful_Day.jpg">
-      <img src="Beautiful_Day.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Beautiful_Day.jpg">
+      <img src="../art/Beautiful_Day.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">beautiful day</div>
   </div>
@@ -153,8 +153,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Stuck_In_My_Room_Playing_Video_Games_All_Day.jpg">
-      <img src="Stuck_In_My_Room_Playing_Video_Games_All_Day.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Stuck_In_My_Room_Playing_Video_Games_All_Day.jpg">
+      <img src="../art/Stuck_In_My_Room_Playing_Video_Games_All_Day.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">stuck in my room all day</div>
   </div>
@@ -162,8 +162,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Sunrise_In_Maimi_.jpg">
-      <img src="Sunrise_In_Maimi_.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Sunrise_In_Maimi_.jpg">
+      <img src="../art/Sunrise_In_Maimi_.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">sunrise in maimi</div>
   </div>
@@ -171,8 +171,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Snails_.jpg">
-      <img src="Snails_.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Snails_.jpg">
+      <img src="../art/Snails_.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">snail</div>
   </div>
@@ -180,8 +180,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Asteroid_Belt.jpg">
-      <img src="Asteroid_Belt.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Asteroid_Belt.jpg">
+      <img src="../art/Asteroid_Belt.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">asteroid belt</div>
   </div>
@@ -189,8 +189,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="Albert.jpg">
-      <img src="Albert.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/Albert.jpg">
+      <img src="../art/Albert.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">albert</div>
   </div>
@@ -198,8 +198,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="My_2D_Tree_Won't_Grow.jpg">
-      <img src="My_2D_Tree_Won't_Grow.jpg" alt="Art" width="600" height="400">
+    <a target="_blank" href="../art/My_2D_Tree_Won't_Grow.jpg">
+      <img src="../art/My_2D_Tree_Won't_Grow.jpg" alt="Art" width="600" height="400">
     </a>
     <div class="desc">my 2d tree won't grow</div>
   </div>
