--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>
     Mahdi's Site
   </title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <meta name="Mahdi Hassen's Website" content="">
 
 
@@ -16,11 +16,11 @@
 <h3>Mahdi Hassen</h3>
 
 <div class="mainContent me">
-  <a href="about.html">about</a>
+  <a href="pages/about.html">about</a>
 </div>
 
 <div class="mainContent projects">
-  <a href="projects.html">projects</a>
+  <a href="pages/projects.html">projects</a>
 </div>
 
 <!--
@@ -45,7 +45,7 @@
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="../icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
 
   <meta name="theme-color" content="#fafafa">
 
