--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
   <a href="pages/projects.html">projects</a>
 </div>
 
-<!--
+
 
 <div class="mainContent blog">
-  <a href="404.html">blog</a>
+  <a href="pages/404.html">blog</a>
 </div>
 
 <div class="mainContent ep">
-  <a href="art.html">art</a>
+  <a href="pages/art.html">art</a>
 </div>
 
--->
+
 
 </body>
 
