--- a/pages/projects.html
+++ b/pages/projects.html
@@ -45,17 +45,17 @@
     </li>
 
     <li>
-<<<<<<< Updated upstream:projects.html
+
       <a href="https://github.com/MahdiHassen/VHDL-Pong">VGA Pong w/FPGA</a>
-=======
+
       <a href="../projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
->>>>>>> Stashed changes:pages/projects.html
+
       <span class="religion">engineering</span>
       <p>completed</p>
     </li>
 
     <li>
-      <a href="mega%20meow%20mart.htmlhtml">mega meow-mart</a>
+      <a href="mega meow mart.html">mega meow-mart</a>
       <span class="programming">programming</span> <span class="short">game development</span>
       <p>completed: top 10% in gmtk2024</p>
     </li>
