working on projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -18,7 +18,61 @@
 
   </h3>
 
+  <ul>
+
+    <li>
+      <div class = "mainContent projects">
+        <a href ="../Resume.pdf" target="_blank" rel="nofollow noopener">convenient list of projects </a>
+      </div>
+
+    </li>
+
+
+    <li>
+      <div class = "mainContent ep">
+        <a href ="https://github.com/MahdiHassen" target="_blank" rel="nofollow noopener">github</a>
+      </div>
+    </li>
+
 </div>
+
+<div>
+  <div class="photopile">
+    <button popovertarget="photo1">
+      <figure>
+        <img src="../art/Albert.jpg" width = "200" height=" 200">
+        <figcaption>capstone: fishingARound</figcaption>
+      </figure>
+    </button>
+
+    <button popovertarget="photo1">
+      <figure>
+        <img src="../art/Albert.jpg" width = "200" height=" 200">
+        <figcaption>m3 paint</figcaption>
+      </figure>
+    </button>
+
+  </div>
+
+  <div class="popovers">
+    <figure popover id="photo1">
+      <img src="" alt="">
+      <figcaption>WIP: see list below</figcaption>
+    </figure>
+
+    <figure popover id="photo2">
+      <img src="/" alt="">
+      <figcaption>WIP: see list below</figcaption>
+    </figure>
+
+    <figure popover id="photo3">
+      <img src="/" alt="">
+      <figcaption>big caption 3</figcaption>
+    </figure>
+  </div>
+
+</div>
+
 
 <div class="sectionContent">
 
