fix formating & page name

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 <h3>Mahdi Hassen</h3>
 
 <div class="mainContent me">
-  <a href="pages/about.html">about</a>
+  <a href="about/index.html">about</a>
 </div>
 
 <div class="mainContent projects">
-  <a href="pages/projects.html">projects</a>
+  <a href="projects/index.html">projects</a>
 </div>
 
 
 
 <div class="mainContent blog">
-  <a href="pages/404.html">blog</a>
+  <a href="404/index.html">blog</a>
 </div>
 
 <div class="mainContent ep">
-  <a href="pages/art.html">art</a>
+  <a href="art/index.html">art</a>
 </div>
 
 
