--- a/projects/index.html
+++ b/projects/index.html
@@ -34,20 +34,22 @@
       </div>
     </li>
 
+  </ul>
+
 </div>
 
 <div>
   <div class="photopile">
     <button popovertarget="photo1">
       <figure>
-        <img src="../art/Albert.jpg" width = "200" height=" 200">
+        <img src="../media/art/Albert.jpg">
         <figcaption>capstone: fishingARound</figcaption>
       </figure>
     </button>
 
     <button popovertarget="photo1">
       <figure>
-        <img src="../art/Albert.jpg" width = "200" height=" 200">
+        <img src="../media/projPictures/vhdl-pong.png">
         <figcaption>m3 paint</figcaption>
       </figure>
     </button>
@@ -102,14 +104,14 @@
 
       <a href="https://github.com/MahdiHassen/VHDL-Pong">VGA Pong w/FPGA</a>
 
-      <a href="../projectPages/richard_the_combat_robot.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
+      <a href="richard/index.html" target="_blank" rel="nofollow noopener">richard the combat robot</a>
 
       <span class="religion">engineering</span>
       <p>completed</p>
     </li>
 
     <li>
-      <a href="mega meow mart.html">mega meow-mart</a>
+      <a href="../pages/mega%20meow%20mart.html">mega meow-mart</a>
       <span class="programming">programming</span> <span class="short">game development</span>
       <p>completed: top 10% in gmtk2024</p>
     </li>
