--- a/projects/richard/index.html
+++ b/projects/richard/index.html
@@ -64,8 +64,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="richard/sim.png">
-      <img src="richard/sim.png" alt="Cinque Terre" width="600" height="400">
+    <a target="_blank" href="richard-pictures/sim.png">
+      <img src="richard-pictures/sim.png" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">Software sim screenshot</div>
   </div>
