--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
 
   <h3>
 
-    <a href = "../index.html">.../about</a>
+    <a href = "../">.../about</a>
 
   </h3>
 
@@ -70,7 +70,6 @@
 
 
 
-</div>
 </div>
 
 </body>
