added blog page

--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
 
     <li>
       <div class = "mainContent projects">
-        <a href ="../Resume.pdf" target="_blank" rel="nofollow noopener">convenient list of projects </a>
+        <a href ="#list-of-projs" target="_blank" rel="nofollow noopener">full list of projects </a>
       </div>
 
     </li>
@@ -40,17 +40,45 @@
 
 <div>
   <div class="photopile">
-    <button popovertarget="photo1">
+    <button popovertarget="capstone">
       <figure>
-        <img src="../media/art/Albert.jpg">
+        <img src="../media/projPictures/fishing-around.PNG">
         <figcaption>capstone: fishingARound</figcaption>
       </figure>
     </button>
 
-    <button popovertarget="photo1">
+    <button popovertarget="m3">
+      <figure>
+        <img src="../media/projPictures/m3-paint.jpg">
+        <figcaption>m3 paint</figcaption>
+      </figure>
+    </button>
+
+    <button popovertarget="chip8">
+      <figure>
+        <img src="../media/projPictures/chip8.png">
+        <figcaption>chip8 interpreter</figcaption>
+      </figure>
+    </button>
+
+    <button popovertarget="richard">
+      <figure>
+        <img src="../media/projPictures/richard.png">
+        <figcaption>richard: combat robot</figcaption>
+      </figure>
+    </button>
+
+    <button popovertarget="cv-skin-class">
+      <figure>
+        <img src="../media/projPictures/cv-skin.png">
+        <figcaption>CV classification of skin cancer</figcaption>
+      </figure>
+    </button>
+
+    <button popovertarget="vhdl-pong">
       <figure>
         <img src="../media/projPictures/vhdl-pong.png">
-        <figcaption>m3 paint</figcaption>
+        <figcaption>VHDL Pong</figcaption>
       </figure>
     </button>
 
@@ -76,7 +104,11 @@
 </div>
 
 
-<div class="sectionContent">
+<div class="sectionContent" id = "list-of-projs">
+
+  <h4>
+    convenient list of my projects:
+  </h4>
 
   <ul>
 
