--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
 
     <li>
       <div class = "mainContent projects">
-        <a href ="#list-of-projs" target="_blank" rel="nofollow noopener">full list of projects </a>
+        <a href ="#list-of-projs">full list of projects </a>
       </div>
 
     </li>
