--- a/projects/index.html
+++ b/projects/index.html
@@ -42,42 +42,42 @@
   <div class="photopile">
     <button popovertarget="capstone">
       <figure>
-        <img src="../media/projPictures/fishing-around.PNG">
+        <img loading="lazy" src="../media/projPictures/fishing-around.webp">
         <figcaption>capstone: fishingARound</figcaption>
       </figure>
     </button>
 
     <button popovertarget="m3">
       <figure>
-        <img src="../media/projPictures/m3-paint.jpg">
+        <img loading="lazy" src="../media/projPictures/m3-paint.webp">
         <figcaption>m3 paint</figcaption>
       </figure>
     </button>
 
     <button popovertarget="chip8">
       <figure>
-        <img src="../media/projPictures/chip8.png">
+        <img loading="lazy" src="../media/projPictures/chip8.webp">
         <figcaption>chip8 interpreter</figcaption>
       </figure>
     </button>
 
     <button popovertarget="richard">
       <figure>
-        <img src="../media/projPictures/richard.png">
+        <img loading="lazy" src="../media/projPictures/richard.webp">
         <figcaption>richard: combat robot</figcaption>
       </figure>
     </button>
 
     <button popovertarget="cv-skin-class">
       <figure>
-        <img src="../media/projPictures/cv-skin.png">
+        <img loading="lazy" src="../media/projPictures/cv-skin.webp">
         <figcaption>CV classification of skin cancer</figcaption>
       </figure>
     </button>
 
     <button popovertarget="vhdl-pong">
       <figure>
-        <img src="../media/projPictures/vhdl-pong.png">
+        <img loading="lazy" src="../media/projPictures/vhdl-pong.webp">
         <figcaption>VHDL Pong</figcaption>
       </figure>
     </button>
