--- a/projects/index.html
+++ b/projects/index.html
@@ -143,7 +143,7 @@
     </li>
 
     <li>
-      <a href="../pages/mega%20meow%20mart.html">mega meow-mart</a>
+      <a href="mega-meow-mart">mega meow-mart</a>
       <span class="programming">programming</span> <span class="short">game development</span>
       <p>completed: top 10% in gmtk2024</p>
     </li>
