--- a/about/index.html
+++ b/about/index.html
@@ -56,17 +56,52 @@
   <h4>
     me
   </h4>
-  <div class = "text"> i'm a computer engineering student at toronto metropolitan university. if you need to get to me, email is the quickest way: mahdi.hassen@torontomu.ca</div>
+  <div class = "text"> I'm currently a computer engineering student at toronto
+    metropolitan university (TMU), graduating april 2025. this spring i'm
+    heading to the university of waterloo to begin my MASc in electrical &
+    computer engineering.
+  </div>
+
+  <div class = "text">
+    i'm interested in a lot of things, but generally i love all things
+    computers. things like computer architecture, soc design & embedded
+    systems really peak my interest. outside of engineering i read a lot of
+    philosophy, which i try to talk about in my blog.
+  </div>
+
+  <div class = "text">
+
+
+
+  </div>
+
+
+  <div class = "text">
+    if you need to get to me, email is the  quickest way: mahdi.hassen@torontomu.ca
+  </div>
 
   <h4>
-    education
+    this website
   </h4>
-  <div class = "text"> WIP</div>
+  <div class = "text">
+  this website is pure html & css, no javascript or anything. i do this
+    for a couple of reasons, but mainly due to compatibility, speed and
+    simplicity.
+  </div>
 
+  <div class = "text">
+    its changed quite a bit since its inception, but i originally based this
+    website on something i saw online at www.brutalistwebsites.com. unfortunately, i
+    can't find the original inspiration anymore, but if you know the original
+    website please shoot me an email so i can give them credit.
+  </div>
   <h4>
-    things i'm working on
+    my blog
   </h4>
-  <div class = "text"> WIP</div>
+  <div class = "text">
+    remind me to fill in this section when i've written some more
+  </div>
+
 
 
 
