updated about with more info

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,9 @@
 
   </h3>
 
+
   <ul>
+
 
     <li>
       <div class = "mainContent me">
@@ -66,7 +68,7 @@
     i'm interested in a lot of things, but generally i love all things
     computers. things like computer architecture, soc design & embedded
     systems really peak my interest. outside of engineering i read a lot of
-    philosophy, which i try to talk about in my blog.
+    philosophy, which i try to talk about in my <a href="../blog"> <u>blog</u></a>.
   </div>
 
   <div class = "text">
@@ -90,8 +92,15 @@
   </div>
 
   <div class = "text">
-    its changed quite a bit since its inception, but i originally based this
-    website on something i saw online at www.brutalistwebsites.com. unfortunately, i
+    on here i mainly just share things i find interesting. this includes projects im working on,
+    thoughts on what im reading/studying and just things that i wish to keep for reference.
+    i'd like to eventually have a personal knowledge base, similar to something like
+    <a href = "https://notes.andymatuschak.org/About_these_notes?stackedNotes=zCMhncA1iSE74MKKYQS5PBZ"><u>Andy Matuschak's working notes.</u></a>
+  </div>
+
+  <div class = "text">
+    its changed quite a bit since its inception, but i originally based the design of this
+    website on something i saw at www.brutalistwebsites.com. unfortunately, i
     can't find the original inspiration anymore, but if you know the original
     website please shoot me an email so i can give them credit.
   </div>
@@ -99,7 +108,8 @@
     my blog
   </h4>
   <div class = "text">
-    remind me to fill in this section when i've written some more
+    remind me to fill in this section when i've written some more, but i hope to
+    get a blog out every 2 months or so
   </div>
 
 
