added txt flashcard

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="mainContent ep">
-  <a href="404/">art</a>
+  <a href="flashcards" target="_blank" rel="noopener noreferrer">flashcard viewer</a>
 </div>
 
 
