--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -1,222 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flashcard App</title>
-    <style>
-        body {
-            font-family: monospace, Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f3f2f0;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+  <title>Flashcard App</title>
+  <style>
+    body {
+      font-family: monospace, Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background-color: #f3f2f0;
 
-        }
+    }
 
-        .main-container {
-            height: 80vh;
-            display: flex;
-            flex-direction: column;
-            padding: 10px;
-            box-sizing: border-box;
-        }
+    .main-container {
+      height: 80vh;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      box-sizing: border-box;
+    }
 
-        .flashcard-container {
-            flex: 1;
-            position: relative;
-            width: 50%;
-            margin: 0 auto;
-        }
+    .flashcard-container {
+      flex: 1;
+      position: relative;
+      width: 50%;
+      margin: 0 auto;
+    }
 
-        @media (max-width: 600px) {
-            .flashcard-container {
-                width: 90%;
-            }
-        }
+    @media (max-width: 600px) {
+      .flashcard-container {
+        width: 90%;
+      }
+    }
 
-        .flashcard {
-            height: 100%;
-            transform-style: preserve-3d;
-            transition: transform 0.6s;
-            cursor: pointer;
-        }
+    .flashcard {
+      height: 100%;
+      transform-style: preserve-3d;
+      transition: transform 0.6s;
+      cursor: pointer;
+    }
 
-        .front, .back {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            backface-visibility: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-            box-sizing: border-box;
-            background-color: #f7f7f6;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            overflow-y: auto;
-        }
+    .front, .back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: left;
+      padding: 20px;
+      box-sizing: border-box;
+      background-color: #f7f7f6;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      overflow-y: auto;
+    }
 
-        .back {
-            transform: rotateY(180deg);
-        }
+    .back {
+      transform: rotateY(180deg);
+    }
 
-        .flashcard.flipped {
-            transform: rotateY(180deg);
-        }
+    .flashcard.flipped {
+      transform: rotateY(180deg);
+    }
 
-        .controls {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 10px;
-        }
+    .controls {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
+    }
 
-        .controls button {
-            padding: 10px 20px;
-            font-size: 18px;
-            margin: 0 10px;
-            cursor: pointer;
-        }
+    .controls button {
+      padding: 10px 20px;
+      font-size: 18px;
+      margin: 0 10px;
+      cursor: pointer;
+    }
 
-        .controls span {
-            font-size: 18px;
-        }
+    .controls span {
+      font-size: 18px;
+    }
 
-        @media (max-width: 600px) {
-            .controls button {
-                padding: 5px 10px;
-                font-size: 14px;
-            }
+    @media (max-width: 600px) {
+      .controls button {
+        padding: 5px 10px;
+        font-size: 14px;
+      }
 
-            .controls span {
-                font-size: 14px;
-            }
-        }
+      .controls span {
+        font-size: 14px;
+      }
+    }
 
-        .disabled {
-            opacity: 0.5;
-            pointer-events: none;
-        }
+    .disabled {
+      opacity: 0.5;
+      pointer-events: none;
+    }
 
-        .upload-section {
-            margin: 20px 0;
-        }
+    .upload-section {
+      margin: 20px 0;
+    }
 
-        .message {
-            margin: 10px 0;
-            color: red;
-        }
-    </style>
+    .message {
+      margin: 10px 0;
+      color: red;
+    }
+  </style>
 </head>
 <body>
-    <div class="main-container">
-        <h1>Flashcard Viewer</h1>
-        <div class="upload-section">
-            <input type="file" id="file-upload" accept=".txt">
-            <p class="message" id="message"></p>
-        </div>
-        <div class="flashcard-container" style="display: none;">
-            <div class="flashcard">
-                <div class="front"></div>
-                <div class="back"></div>
-            </div>
-        </div>
-        <div class="controls" style="display: none;">
-            <button id="prev">←</button>
-            <span id="card-number"></span>
-            <button id="next">→</button>
-        </div>
+<div class="main-container">
+  <h1>Flashcard Viewer</h1>
+  <div class="upload-section">
+    <input type="file" id="file-upload" accept=".txt">
+    <p class="message" id="message"></p>
+  </div>
+  <div class="flashcard-container" style="display: none;">
+    <div class="flashcard">
+      <div class="front"></div>
+      <div class="back"></div>
     </div>
+  </div>
+  <div class="controls" style="display: none;">
+    <button id="prev">←</button>
+    <span id="card-number"></span>
+    <button id="next">→</button>
+  </div>
+</div>
 
-    <script>
-        let flashcards = [];
-        let currentIndex = 0;
-        const mainContainer = document.querySelector('.main-container');
-        const flashcardContainer = document.querySelector('.flashcard-container');
-        const controls = document.querySelector('.controls');
-        const flashcard = document.querySelector('.flashcard');
-        const front = document.querySelector('.front');
-        const back = document.querySelector('.back');
-        const cardNumber = document.getElementById('card-number');
-        const prevBtn = document.getElementById('prev');
-        const nextBtn = document.getElementById('next');
-        const fileUpload = document.getElementById('file-upload');
-        const message = document.getElementById('message');
-        const uploadSection = document.querySelector('.upload-section');
+<script>
+  let flashcards = [];
+  let currentIndex = 0;
+  const mainContainer = document.querySelector('.main-container');
+  const flashcardContainer = document.querySelector('.flashcard-container');
+  const controls = document.querySelector('.controls');
+  const flashcard = document.querySelector('.flashcard');
+  const front = document.querySelector('.front');
+  const back = document.querySelector('.back');
+  const cardNumber = document.getElementById('card-number');
+  const prevBtn = document.getElementById('prev');
+  const nextBtn = document.getElementById('next');
+  const fileUpload = document.getElementById('file-upload');
+  const message = document.getElementById('message');
+  const uploadSection = document.querySelector('.upload-section');
 
-        function displayCard() {
-            if (flashcards.length === 0) return;
-            const card = flashcards[currentIndex];
-            front.innerHTML = card.question;
-            back.innerHTML = card.answer;
-            flashcard.classList.remove('flipped');
-            updateControls();
+  function displayCard() {
+    if (flashcards.length === 0) return;
+    const card = flashcards[currentIndex];
+    front.innerHTML = card.question;
+    back.innerHTML = card.answer;
+    flashcard.classList.remove('flipped');
+    updateControls();
+  }
+
+  function flipCard() {
+    flashcard.classList.toggle('flipped');
+  }
+
+  function nextCard() {
+    if (currentIndex < flashcards.length - 1) {
+      currentIndex++;
+      displayCard();
+    }
+  }
+
+  function prevCard() {
+    if (currentIndex > 0) {
+      currentIndex--;
+      displayCard();
+    }
+  }
+
+  function updateControls() {
+    cardNumber.textContent = `${currentIndex + 1} / ${flashcards.length}`;
+    prevBtn.classList.toggle('disabled', currentIndex === 0);
+    nextBtn.classList.toggle('disabled', currentIndex === flashcards.length - 1);
+  }
+
+  function loadFlashcards(file) {
+    const reader = new FileReader();
+    reader.onload = function(event) {
+      const content = event.target.result;
+      const lines = content.split('\n').filter(line => line.trim() !== '');
+      flashcards = lines.map(line => {
+        const [question, answer] = line.split(';');
+        if (!question || !answer) {
+          message.textContent = 'Error: Some lines do not have both question and answer.';
+          return null;
         }
+        return { question, answer };
+      }).filter(card => card !== null);
+      if (flashcards.length > 0) {
+        currentIndex = 0;
+        flashcardContainer.style.display = 'block';
+        controls.style.display = 'flex';
+        uploadSection.style.display = 'none';
+        displayCard();
+        message.textContent = '';
+      } else {
+        message.textContent = 'Error: No valid flashcards found in the file.';
+      }
+    };
+    reader.readAsText(file);
+  }
 
-        function flipCard() {
-            flashcard.classList.toggle('flipped');
-        }
-
-        function nextCard() {
-            if (currentIndex < flashcards.length - 1) {
-                currentIndex++;
-                displayCard();
-            }
-        }
-
-        function prevCard() {
-            if (currentIndex > 0) {
-                currentIndex--;
-                displayCard();
-            }
-        }
-
-        function updateControls() {
-            cardNumber.textContent = `${currentIndex + 1} / ${flashcards.length}`;
-            prevBtn.classList.toggle('disabled', currentIndex === 0);
-            nextBtn.classList.toggle('disabled', currentIndex === flashcards.length - 1);
-        }
-
-        function loadFlashcards(file) {
-            const reader = new FileReader();
-            reader.onload = function(event) {
-                const content = event.target.result;
-                const lines = content.split('\n').filter(line => line.trim() !== '');
-                flashcards = lines.map(line => {
-                    const [question, answer] = line.split(';');
-                    if (!question || !answer) {
-                        message.textContent = 'Error: Some lines do not have both question and answer.';
-                        return null;
-                    }
-                    return { question, answer };
-                }).filter(card => card !== null);
-                if (flashcards.length > 0) {
-                    currentIndex = 0;
-                    flashcardContainer.style.display = 'block';
-                    controls.style.display = 'flex';
-                    uploadSection.style.display = 'none';
-                    displayCard();
-                    message.textContent = '';
-                } else {
-                    message.textContent = 'Error: No valid flashcards found in the file.';
-                }
-            };
-            reader.readAsText(file);
-        }
-
-        // Event listeners
-        flashcard.addEventListener('click', flipCard);
-        prevBtn.addEventListener('click', prevCard);
-        nextBtn.addEventListener('click', nextCard);
-        fileUpload.addEventListener('change', function(event) {
-            const file = event.target.files[0];
-            if (file) {
-                loadFlashcards(file);
-            }
-        });
-    </script>
+  // Event listeners
+  flashcard.addEventListener('click', flipCard);
+  prevBtn.addEventListener('click', prevCard);
+  nextBtn.addEventListener('click', nextCard);
+  fileUpload.addEventListener('change', function(event) {
+    const file = event.target.files[0];
+    if (file) {
+      loadFlashcards(file);
+    }
+  });
+</script>
 </body>
 </html>
