--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -11,7 +11,6 @@
       padding: 0;
       text-align: center;
       background-color: #f3f2f0;
-
     }
 
     .main-container {
@@ -20,6 +19,14 @@
       flex-direction: column;
       padding: 10px;
       box-sizing: border-box;
+      position: relative;
+      margin-top: 60px; /* Push content down to avoid overlap with back button */
+    }
+
+    @media (max-width: 600px) {
+      .main-container {
+        margin-top: 80px; /* Increase spacing on mobile if needed */
+      }
     }
 
     .flashcard-container {
@@ -90,7 +97,6 @@
         padding: 5px 10px;
         font-size: 14px;
       }
-
       .controls span {
         font-size: 14px;
       }
@@ -105,6 +111,23 @@
       margin: 20px 0;
     }
 
+    /* Unified button styling */
+    .btn {
+      margin-top: 10px;
+      padding: 8px 16px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    /* Back button styling (top left) */
+    .back-btn {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      display: none;
+      z-index: 10;
+    }
+
     .message {
       margin: 10px 0;
       color: red;
@@ -112,10 +135,18 @@
   </style>
 </head>
 <body>
+<!-- Back Button -->
+<button id="back-btn" class="btn back-btn">Back</button>
+
 <div class="main-container">
   <h1>Flashcard Viewer</h1>
   <div class="upload-section">
-    <input type="file" id="file-upload" accept=".txt">
+    <!-- Hidden file input -->
+    <input type="file" id="file-upload" accept=".txt" style="display: none;">
+    <!-- Styled buttons for file open and preset load -->
+    <button id="open-file" class="btn">Open a File</button>
+    <br>
+    <button id="load-cen800" class="btn">Load CEN800 Midterm Flashcards</button>
     <p class="message" id="message"></p>
   </div>
   <div class="flashcard-container" style="display: none;">
@@ -134,7 +165,6 @@
 <script>
   let flashcards = [];
   let currentIndex = 0;
-  const mainContainer = document.querySelector('.main-container');
   const flashcardContainer = document.querySelector('.flashcard-container');
   const controls = document.querySelector('.controls');
   const flashcard = document.querySelector('.flashcard');
@@ -146,6 +176,41 @@
   const fileUpload = document.getElementById('file-upload');
   const message = document.getElementById('message');
   const uploadSection = document.querySelector('.upload-section');
+  const loadCen800Btn = document.getElementById('load-cen800');
+  const openFileBtn = document.getElementById('open-file');
+  const backBtn = document.getElementById('back-btn');
+
+  function processFlashcardsContent(content) {
+    const lines = content.split('\n').filter(line => line.trim() !== '');
+    flashcards = lines.map(line => {
+      const [question, answer] = line.split(';');
+      if (!question || !answer) {
+        message.textContent = 'Error: Some lines do not have both question and answer.';
+        return null;
+      }
+      return { question, answer };
+    }).filter(card => card !== null);
+    if (flashcards.length > 0) {
+      currentIndex = 0;
+      flashcardContainer.style.display = 'block';
+      controls.style.display = 'flex';
+      uploadSection.style.display = 'none';
+      backBtn.style.display = 'block';
+      displayCard();
+      message.textContent = '';
+    } else {
+      message.textContent = 'Error: No valid flashcards found in the file.';
+    }
+  }
+
+  function loadFlashcards(file) {
+    const reader = new FileReader();
+    reader.onload = function(event) {
+      const content = event.target.result;
+      processFlashcardsContent(content);
+    };
+    reader.readAsText(file);
+  }
 
   function displayCard() {
     if (flashcards.length === 0) return;
@@ -180,42 +245,49 @@
     nextBtn.classList.toggle('disabled', currentIndex === flashcards.length - 1);
   }
 
-  function loadFlashcards(file) {
-    const reader = new FileReader();
-    reader.onload = function(event) {
-      const content = event.target.result;
-      const lines = content.split('\n').filter(line => line.trim() !== '');
-      flashcards = lines.map(line => {
-        const [question, answer] = line.split(';');
-        if (!question || !answer) {
-          message.textContent = 'Error: Some lines do not have both question and answer.';
-          return null;
-        }
-        return { question, answer };
-      }).filter(card => card !== null);
-      if (flashcards.length > 0) {
-        currentIndex = 0;
-        flashcardContainer.style.display = 'block';
-        controls.style.display = 'flex';
-        uploadSection.style.display = 'none';
-        displayCard();
-        message.textContent = '';
-      } else {
-        message.textContent = 'Error: No valid flashcards found in the file.';
-      }
-    };
-    reader.readAsText(file);
-  }
-
   // Event listeners
   flashcard.addEventListener('click', flipCard);
   prevBtn.addEventListener('click', prevCard);
   nextBtn.addEventListener('click', nextCard);
+
+  openFileBtn.addEventListener('click', function() {
+    fileUpload.click();
+  });
+
   fileUpload.addEventListener('change', function(event) {
     const file = event.target.files[0];
     if (file) {
       loadFlashcards(file);
     }
+  });
+
+  loadCen800Btn.addEventListener('click', function() {
+    fetch('MT_cen800.txt')
+      .then(response => {
+        if (!response.ok) {
+          throw new Error("Network response was not ok");
+        }
+        return response.text();
+      })
+      .then(content => {
+        processFlashcardsContent(content);
+      })
+      .catch(error => {
+        message.textContent = 'Error loading file: ' + error;
+      });
+  });
+
+  backBtn.addEventListener('click', function() {
+    // Unload current flashcards set
+    flashcards = [];
+    currentIndex = 0;
+    flashcardContainer.style.display = 'none';
+    controls.style.display = 'none';
+    uploadSection.style.display = 'block';
+    backBtn.style.display = 'none';
+    message.textContent = '';
+    // Reset file input (optional)
+    fileUpload.value = "";
   });
 </script>
 </body>
