--- a/customSearch/index.html
+++ b/customSearch/index.html
@@ -44,7 +44,7 @@
       --result-bg: #fff;
       --result-border: #ccc;
       --accent-pagination-color: #a556e8; /* default accent for pagination */
-      --active-pagination-color: #ff9800; /* active page number color */
+      --active-pagination-color: #c2e235; /* active page number color */
     }
     
     /* Dark Mode Equivalents (refined) */
@@ -60,7 +60,7 @@
       --result-bg: #2c2c2c;
       --result-border: #444;
       --accent-pagination-color: #a556e8;
-      --active-pagination-color: #ff9800;
+      --active-pagination-color: #c2e235;
     }
     
     /* Global Styles */
