Added Resource Search

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   <a href="flashcards" target="_blank" rel="noopener noreferrer">flashcard viewer</a>
 </div>
 
+<div class="mainContent projects">
+  <a href="search">resource search engine</a>
+</div>
+
 
 
 </body>
