--- a/search/index.html
+++ b/search/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mahdi's Search</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="style.css">
@@ -19,7 +20,7 @@
 
 <div class="container">
   <div class="search-box">
-    <input type="text" id="searchInput" placeholder="Search your resources…" aria-label="Search">
+    <input type="text" id="searchInput" placeholder="Search my resources…" aria-label="Search">
     <button id="searchBtn">Search</button>
   </div>
   <!-- Suggestions Container -->
