added some bookmarks

--- a/search/index.html
+++ b/search/index.html
@@ -50,7 +50,8 @@
   </div>
 
   <div id="results" aria-live="polite">
-    <div class="message">Enter a query and hit search.</div>
+    <div class="message">Search through resources I find interesting. Some of these are just fun and some are
+      for my own reference. Everything is stored in resources.txt in this page's directory. Enter a query and hit search.</div>
   </div>
 </div>
 
