added blog, removed old webapps and pictures
added on being removed blog

--- a/about/index.html
+++ b/about/index.html
@@ -58,10 +58,8 @@
   <h4>
     me
   </h4>
-  <div class = "text"> I'm currently a computer engineering student at toronto
-    metropolitan university (TMU), graduating april 2025. this spring i'm
-    heading to the university of waterloo to begin my MASc in electrical &
-    computer engineering.
+  <div class = "text"> I'm currently a master's computer/electrical engineering student at the university of
+    waterloo. I graduated from my bachelor's in computer engineering from toronto metropolitan university (TMU) in april 2025.
   </div>
 
   <div class = "text">
@@ -79,14 +77,14 @@
 
 
   <div class = "text">
-    if you need to get to me, email is the  quickest way: mahdi.hassen@torontomu.ca
+    if you need to get to me, email is the  quickest way: mhassen@uwaterloo.ca
   </div>
 
   <h4>
     this website
   </h4>
   <div class = "text">
-  this website is pure html & css, no javascript or anything. i do this
+  this website is pure html & css, no javascript (except for my mini webapps) or anything. i do this
     for a couple of reasons, but mainly due to compatibility, speed and
     simplicity.
   </div>
@@ -96,6 +94,10 @@
     thoughts on what im reading/studying and just things that i wish to keep for reference.
     i'd like to eventually have a personal knowledge base, similar to something like
     <a href = "https://notes.andymatuschak.org/About_these_notes?stackedNotes=zCMhncA1iSE74MKKYQS5PBZ"><u>Andy Matuschak's working notes.</u></a>
+  </div>
+
+  <div class = "text">
+    i sometimes share small webapps i make for my own use. i remove them when i no longer have a use for them.
   </div>
 
   <div class = "text">
@@ -109,7 +111,9 @@
   </h4>
   <div class = "text">
     remind me to fill in this section when i've written some more, but i hope to
-    get a blog out every 2 months or so
+    get a blog out every 2 months or so. i currently write my blogs in straight in the html (yes it sucks), but i'll
+    probably
+    transition to some markdown to html converter or static site gen after I get my css setup correctly.
   </div>
 
 
