--- a/projects/index.html
+++ b/projects/index.html
@@ -38,70 +38,6 @@
 
 </div>
 
-<div>
-  <div class="photopile">
-    <button popovertarget="capstone">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/fishing-around.webp">
-        <figcaption>capstone: fishingARound</figcaption>
-      </figure>
-    </button>
-
-    <button popovertarget="m3">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/m3-paint.webp">
-        <figcaption>m3 paint</figcaption>
-      </figure>
-    </button>
-
-    <button popovertarget="chip8">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/chip8.webp">
-        <figcaption>chip8 interpreter</figcaption>
-      </figure>
-    </button>
-
-    <button popovertarget="richard">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/richard.webp">
-        <figcaption>richard: combat robot</figcaption>
-      </figure>
-    </button>
-
-    <button popovertarget="cv-skin-class">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/cv-skin.webp">
-        <figcaption>CV classification of skin cancer</figcaption>
-      </figure>
-    </button>
-
-    <button popovertarget="vhdl-pong">
-      <figure>
-        <img loading="lazy" src="../media/projPictures/vhdl-pong.webp">
-        <figcaption>VHDL Pong</figcaption>
-      </figure>
-    </button>
-
-  </div>
-
-  <div class="popovers">
-    <figure popover id="photo1">
-      <img src="" alt="">
-      <figcaption>WIP: see list below</figcaption>
-    </figure>
-
-    <figure popover id="photo2">
-      <img src="/" alt="">
-      <figcaption>WIP: see list below</figcaption>
-    </figure>
-
-    <figure popover id="photo3">
-      <img src="/" alt="">
-      <figcaption>big caption 3</figcaption>
-    </figure>
-  </div>
-
-</div>
 
 
 <div class="sectionContent" id = "list-of-projs">
@@ -110,13 +46,14 @@
     convenient list of my projects:
   </h4>
 
+
   <ul>
 
 
     <li>
       <a>capstone: fishingARound</a>
       <span class="programming">programming</span>
-      <p>ongoing</p>
+      <p>completed</p>
     </li>
 
     <li>
